--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - MYSQL_PASSWORD=login_employees
     ports:
       - 3306:3306
-    volumes:
+   # volumes:
       #- /srv/projects/test_db:/mysql_data
 
 networks:
